# scrollfx-wip

./: .gitignore  CLAUDE.md  CONSOLIDATION-SUMMARY.md  LICENSE  README.md  agent-common.md  agent6.md  agent7.md  complete_scroll_standalone_setup.sh  echo-cli-technical-specification.md  extract_scroll_scene.py  handoff.md  handoff2.md  replace_fx_renderer.py  report-fx-renderer-replacement.md  report-scene-extraction.md  report-scene-separation.md  report-scenefx-conversion.md  run_mechanical_replacements.sh  tmp-issue1-previous-report.md
.github/workflows/: claude.yml
agent1/sway/: commands.c  config.c
agent2/reports/: agent2-container-tree.md
agent4/: agent4-layer-desktop.md
include/sway/: layer_criteria.h
investigation/: investigation-include.md  investigation-sway-commands.md  investigation-sway-config.md  investigation-sway-desktop.md  investigation-sway-input.md  investigation-sway-tree.md
kit-v2/: INTEGRATION-UPDATE.md  README.md  SIMPLE-INTEGRATION-GUIDE.md
october/: affected-commits.txt  all-commits-raw.txt  dawsers-commits.txt  render-commits.txt  scene-commits.txt
references/scroll/: TUTORIAL.md  config.in  meson.build
reports/: 000-executive-summary.md  001-initial-analysis.md  002-scene-graph-changes.md  003-buffer-renderer-changes.md  004-scenefx-api-migration-guide.md  005-risk-assessment-roadmap.md  agent1-configuration-commands.md
scene-scroll/: meson.build
scene-scroll/include/scene-scroll/: color.h  scene.h
scene-scroll/src/: color.c  color.h  debug.c  drag_icon.c  ext_image_capture_source_v1.c  layer_shell_v1.c  output.c  output.h  output_layout.c  scene.c  subsurface_tree.c  surface.c  xdg_shell.c
scenefx-scroll/: .gitkeep  API_MAPPING.md  LICENSE  README.md  flake.nix  meson.build  meson_options.txt
scenefx-scroll/examples/: meson.build  scene-graph.c
scenefx-scroll/include/: meson.build
scenefx-scroll/protocol/: meson.build
scenefx-scroll/render/: meson.build
scenefx-scroll/tinywl/: meson.build  tinywl.c
scenefx-scroll/types/: meson.build
scenefx-scroll/util/: meson.build
scroll-standalone/: README.md  config.in  meson.build  meson_options.txt  scroll.desktop
scrollfx-implementation/: FILE-MANIFEST.txt  IMPLEMENTATION-GUIDE.md  README.md  integrate-scrollfx.sh
sway/: layer_criteria.c
(+166 files in other folders)
